--- a/menu.html
+++ b/menu.html
@@ -78,14 +78,14 @@
                             Alle Teppische
                         </a>
                         <div class="mw-100 px-4 dropdown-menu text-dark main-nav-bar " aria-labelledby="navbarDropdown">
-                            <div class="container bg-white my-3">
+                            <div class="container bg-white my-2">
                                 <div class="row">
                                     <div class="col-md-5">
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <span class="text-uppercase text-dark h6 my-2 text-center">Kategorien</span>
+                                                <span class="text-uppercase text-dark h6 text-center">Kategorien</span>
                                                 <hr>
-                                                <ul class="nav nav-alle-teppisch-kategorien mt-2 text-left">
+                                                <ul class="nav nav-alle-teppisch-kategorientext-left">
                                                     <li><a href="/moderne-teppiche/gabbeh-nepal-teppiche" class="dropdown-item">Gabbeh Teppiche
                                                         </a></li>
                                                     <li><a href="/moderne-teppiche/kelim-teppiche" class="dropdown-item">
@@ -113,7 +113,7 @@
                                             </div>
                                             <!-- /.col-md-3  -->
                                             <div class="col-md-6">
-                                                <span class="text-uppercase text-dark h6 my-2">Materiallen</span>
+                                                <span class="text-uppercase text-dark h6">Materiallen</span>
                                                 <hr>
                                                 <ul class="nav flex-column nav-alle-teppisch-kategorien mt-2 pr-2">
                                                         <li><a href="https://www.morgenland-teppiche.de/moderne-teppiche?facets=37%2C38" class="dropdown-item">
