fixed orient teppisch

--- a/menu.html
+++ b/menu.html
@@ -567,47 +567,47 @@
                                         <div class="col-md-7">
                                             <span class="text-uppercase text-dark h6 my-2 font-weight-bold">Trends</span>
                                             <hr>
-                                            <div class="row mt-4">
-                                                <div class="col-4">
-                                                    <div class="imgBoxNav ModernBilderNAV">
+                                            <div class="container">
+                                                <div class="row mt-4">
+                                                    <div class="col-4 imgBoxNav">
                                                         <a href="https://www.morgenland-teppiche.de/orientteppiche/afghan-teppiche">
-                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/Afghan-Pakistan-Teppiche.jpg" alt="Afghan Pakistan Teppiche Orient" class="img-fluid px-2 img-thumbnail">
+                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/Afghan-Pakistan-Teppiche.jpg" alt="Afghan Pakistan Teppiche Orient" class="img-fluid">
                                                         </a>
-                                                    </div>
 
-                                                    <div class="imgBoxNav ModernBilderNAV">
+                                                    </div>
+                                                    <div class="col-4 imgBoxNav">
                                                         <a href="https://www.morgenland-teppiche.de/teppiche/perserteppiche">
-                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/PERSERTEPPICHE.jpg" alt="Perserteppiche Orientteppiche" class="img-fluid px-2 img-thumbnail">
+                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/PERSERTEPPICHE.jpg" alt="Perserteppiche Orientteppiche" class="img-fluid">
                                                         </a>
                                                     </div>
-                                                </div>
-                                                <div class="col-4">
-                                                    <div class="imgBoxNav ModernBilderNAV">
+
+                                                    <div class="col-4 imgBoxNav">
+
                                                         <a href="https://www.morgenland-teppiche.de/orientteppiche/hamedan-teppiche">
-                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/HAMEDAN-TEPPICHE.jpg" alt="HAMEDAN Teppiche Orientteppiche" class="img-fluid px-2 img-thumbnail">
+                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/HAMEDAN-TEPPICHE.jpg" alt="HAMEDAN Teppiche Orientteppiche" class="img-fluid">
                                                         </a>
                                                     </div>
-
-                                                    <div class="imgBoxNav ModernBilderNAV">
-                                                       <a href="https://www.morgenland-teppiche.de/orientteppiche/kelim-teppiche">
-                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/KELIM-Teppiche.jpg" alt="KELIM Teppiche Orientteppiche" class="img-fluid px-2 img-thumbnail">
-                                        </a>
-                                                    </div>
-
                                                 </div>
-                                                <div class="col-4">
-                                                    <div class="imgBoxNav ModernBilderNAV">
-                                                         <a href="https://www.morgenland-teppiche.de/teppiche/seidenteppiche">
-                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/SEIDENTEPPICHE.jpg" alt="SEIDENTEPPICHE Teppiche Orientteppiche" class="img-fluid px-2 img-thumbnail">
-                                        </a>
+                                                <div class="row">
+                                                    <div class="col-4 imgBoxNav">
+
+                                                        <a href="https://www.morgenland-teppiche.de/orientteppiche/kelim-teppiche">
+                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/KELIM-Teppiche.jpg" alt="KELIM Teppiche Orientteppiche" class="img-fluid">
+                                                        </a>
                                                     </div>
-                                                    <div class="imgBoxNav ModernBilderNAV">
+                                                    <div class="col-4 imgBoxNav">
+                                                        <a href="https://www.morgenland-teppiche.de/teppiche/seidenteppiche">
+                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/SEIDENTEPPICHE.jpg" alt="SEIDENTEPPICHE Teppiche Orientteppiche" class="img-fluid">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-4 imgBoxNav">
                                                         <a href="https://www.morgenland-teppiche.de/orientteppiche/ziegler-teppiche">
-                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/ZIEGLER-KAZAK-TEPPICHE.jpg" alt="ZIEGLER KAZAK TEPPICHE Orientteppiche" class="img-fluid px-2 img-thumbnail">
-                                        </a>
+                                                            <img src="https://cdn02.plentymarkets.com/6wg68w8zahno/frontend/Webshop-Neu/Menu/Orientteppiche/ZIEGLER-KAZAK-TEPPICHE.jpg" alt="ZIEGLER KAZAK TEPPICHE Orientteppiche" class="img-fluid">
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
+
 
                                         </div>
                                         <hr>
